tests/snapshots/parser_error_fixtures/missing_fn_param_colon.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_fn_param_colon.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Type Annotation Colon

Missing `:` in function parameter type annotation. Write it as `x: Type`.

  examples/parser_errors/missing_fn_param_colon.flx:1:10
  |
1 | fn add(x Int, y: Int) -> Int {
  |          ^^^

Hint:
  Type annotations use `name: Type`.
== stdout ==
<not executed>
